--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Organize seu sorteio de Amigo Oculto de forma segura e divertida com distribuição via WhatsApp e tokens mágicos criptografados." />
   </head>
   <body>
+    <meta name="theme-color" content="#8b5cf6" />
+    <meta property="og:image" content="/og-image.png" />
+    <link rel="manifest" href="/manifest.json" />
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
