Fix OG image URL for WhatsApp sharing

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amigo Oculto Mágico - Sorteio Seguro via WhatsApp</title>
     <meta name="description" content="Organize seu sorteio de Amigo Oculto de forma segura e divertida com distribuição via WhatsApp e tokens mágicos criptografados." />
+      <meta name="theme-color" content="#8b5cf6" />
+    <meta property="og:image" content="https://amigo-oculto-1ycntxs5g-dev-junior-coelhos-projects.vercel.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <meta name="theme-color" content="#8b5cf6" />
-    <meta property="og:image" content="/og-image.png" />
-    <link rel="manifest" href="/manifest.json" />
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
